- dodanie do odpowiedzi autentykacyjne informacji o rola użytkownika zalogowanego
