# src/main/java/pl/wsb/collection/model/RoleResponse.java
@@ -1,0 +1,117 @@
+/*
+ * collection-library-server-API
+ * API for collection-library-server
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+
+package pl.wsb.collection.model;
+
+import com.fasterxml.jackson.annotation.JsonManagedReference;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModelProperty;
+import pl.wsb.collection.hibernate.UserAccountRole;
+
+import javax.persistence.*;
+import javax.validation.constraints.NotNull;
+import java.io.Serializable;
+import java.util.Date;
+import java.util.HashSet;
+import java.util.Objects;
+import java.util.Set;
+
+/**
+ * Role
+ */
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2020-06-08T19:18:47.684Z")
+public class RoleResponse implements Serializable {
+
+  private int id;
+
+
+  private String abbr;
+
+
+  private Date created;
+
+  private int deleted;
+
+
+  private Date modified;
+
+
+  private String name;
+
+
+  public RoleResponse(){
+  }
+
+
+  public RoleResponse(Date modified, String abbr) {
+    this.modified = modified;
+    this.abbr = abbr;
+  }
+  public RoleResponse(Date created, Date modified, String name, String abbr, Integer deleted) {
+    this.created = created;
+    this.modified = modified;
+    this.name = name;
+    this.abbr = abbr;
+    this.deleted = deleted;
+  }
+
+
+  public int getId() {
+    return this.id;
+  }
+
+  public void setId(int id) {
+    this.id = id;
+  }
+
+  public String getAbbr() {
+    return this.abbr;
+  }
+
+  public void setAbbr(String abbr) {
+    this.abbr = abbr;
+  }
+
+  public Date getCreated() {
+    return this.created;
+  }
+
+  public void setCreated(Date created) {
+    this.created = created;
+  }
+
+  public int getDeleted() {
+    return this.deleted;
+  }
+
+  public void setDeleted(int deleted) {
+    this.deleted = deleted;
+  }
+
+  public Date getModified() {
+    return this.modified;
+  }
+
+  public void setModified(Date modified) {
+    this.modified = modified;
+  }
+
+  public String getName() {
+    return this.name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+  }
+}
+
